Update robocode md.

--- a/_posts/2011-12-01-robocode.md
+++ b/_posts/2011-12-01-robocode.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  "Robocode Using Reinforcement Learning"
+date:   2011-12-01
 excerpt: "Robots in a battlefield."
 project: true
 comments: false
