--- a/_posts/2011-12-01-robocode.md
+++ b/_posts/2011-12-01-robocode.md
@@ -1,4 +1,13 @@
---
+---
+layout: post
+title:  "Heterogenous Networks"
+date:   2011-12-01
+excerpt: "Heterogeneous Networks"
+tag: false 
+project: true
+comments: false
+---
+
 The goal was to program a robot battle tank to fight against other robots in an interactive virtual Robocode battlefield in Java. I applied various Artificial Intelligence (AI) concepts to induce intelligence in my battle tank.  Reinforcement learning (Q-learning algorithm) and neural network using back-propagation was implemented on my agent. Progressive learning was observed on my robot which was evaluated based on the number of rounds of battles won and the survival time of my robot. It was a fun project!
 
 The images below show my robot, Barfi battling against the enemy robot, Tracker
@@ -10,11 +19,13 @@ Reinforcement learning or Q-learning algorithm is used whenever there is uncerta
 <figure class="half">
 	<img src="assets/img/robocode-1.png">
 	<img src="assets/img/robocode-2.png">
+	<figcaption> Robocode </figcaption>
 </figure>
 
 <figure class="half">
 	<img src="assets/img/robocode-3.png">
 	<img src="assets/img/robocode-4.png">
+	<figcaption> Robocode </figcaption>
 </figure>
 
 Initially, a look up table (LUT) was used to store the state-action pairs.
