Update md to add images.

--- a/_posts/2011-12-01-robocode.md
+++ b/_posts/2011-12-01-robocode.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Heterogenous Networks"
+title:  "Robocode using Reinforcement Learning"
 date:   2011-12-01
-excerpt: "Heterogeneous Networks"
+excerpt: "Robots in a battlefield."
 tag: false 
 project: true
 comments: false
@@ -17,14 +17,14 @@ in the Robocode platform and successfully beating him. The game can also be exte
 Reinforcement learning or Q-learning algorithm is used whenever there is uncertainty about the transition model of the environment. In this type of learning, we have sequence of actions and state transitions with rewards associated at some points of these sequences. We then try to learn the optimal policy. Reinforcement learning guided my learning agent to reach the optimal policy even though the agent didn’t know anything about the reward when starting out.
 
 <figure class="half">
-	<img src="assets/img/robocode-1.png">
-	<img src="assets/img/robocode-2.png">
+	<img src="/assets/img/robocode-1.png">
+	<img src="/assets/img/robocode-2.png">
 	<figcaption> Robocode </figcaption>
 </figure>
 
 <figure class="half">
-	<img src="assets/img/robocode-3.png">
-	<img src="assets/img/robocode-4.png">
+	<img src="/assets/img/robocode-3.png">
+	<img src="/assets/img/robocode-4.png">
 	<figcaption> Robocode </figcaption>
 </figure>
 
