Add a post about LightweightM2M (LwM2M) protocol.

--- a/_posts/2023-02-04-CBOR.md
+++ b/_posts/2023-02-04-CBOR.md
@@ -13,7 +13,7 @@ In the realm of Internet of Things (IoT) development, where the challenge often 
 
 One of CBOR's standout features is its ability to shrink both code and message sizes. This reduction in size is pivotal for IoT devices, where resources are constrained, and efficient communication is paramount. CBOR achieves this by representing intricate data structures in a concise and efficient binary form.
 
-Unlike some other data formats, CBOR operates without the need for a predefined schema or structure during encoding and decoding processes. This flexibility is a boon in scenarios where data structures are subject to evolution or disparate systems need to communicate without strict schema alignment. In CBOR, type information is intricately woven into the encoded data, empowering receivers to interpret the information autonomously, without relying on a predefined schema.
+Unlike some other data formats, CBOR operates without the need for a predefined schema or structure during encoding and decoding processes. This flexibility is a boon in scenarios where data structures are subject to evolution or disparate systems need to communicate without strict schema alignment. In CBOR, type information is intricately woven into the encoded data, empowering receivers to interpret the information autonomously, without relying on a predefined schema. CBOR's RFC can be found [here](https://datatracker.ietf.org/doc/html/rfc7049).
 
 For developers venturing into the world of C programming for IoT, the existence of the "libcbor" library is a noteworthy resource. This library facilitates the generation and parsing of CBOR, aligning seamlessly with the demands of resource-constrained IoT environments. More details about this library can be explored [here](https://libcbor.readthedocs.io/en/v0.6.0/index.html).
 
